fixed nav-logo overflow issue in mobile landscape mode
in landscape mode on mobile devices the newsweek logo in the nav
would overflow this commit adds height: 100%; to the logo to make
it respond to changes in browser height.

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -18,6 +18,7 @@
 
 .nav-logo {
   max-width: 150px;
+  height: 100%;
 }
 
 /* the buttons only on desktop devices */
